--- a/CV CIHUY BOOTSTRAP CUY/index.html
+++ b/CV CIHUY BOOTSTRAP CUY/index.html
@@ -25,7 +25,7 @@
         <!-- Foto dll -->
         <div class="col-4 text-center color">
           <div class="header-left">
-            <img src="2305176019.jpg" alt="" class="img-thumbnail rounded-circle mb-4 mt-4" />
+            <img src="CV Foto/2305176019.jpg" alt="" class="img-thumbnail rounded-circle mb-4 mt-4" />
             <h1>Maruto Nugroho</h1>
             <h4>Mahasiswa Pendikom</h4>
           </div>
